# SKD_DEVEL

./: .gitignore  README.md  install_conda_env.sh  oppt_install.sh  run_skd_assessment.sh  skd_full_install.sh  skd_oppt_install.sh
opptv5/: README.md
skd_oppt/: README.md
skd_oppt/configs/: bashFile
skd_oppt/dynamics_files/: discretizeIntentions.csv  dynamicsDB.csv
skd_oppt/plugins/: CMakeLists.txt
skd_oppt/plugins/SKDDefines/: KamikazeTrajGenGeneralUtils.hpp  SafeTrajGenGeneralUtils.hpp  json.hpp
skd_oppt/plugins/SKDHeuristicPlugins/: CMakeLists.txt  KamikazeTrajGenHeuristicPlugin.cpp  SafeTrajGenHeuristicPlugin.cpp
skd_oppt/plugins/SKDInitialBeliefPlugins/: CMakeLists.txt  KamikazeTrajGenInitialBeliefPlugin.cpp  SafeTrajGenInitialBeliefPlugin.cpp
skd_oppt/plugins/SKDObservationPlugins/: CMakeLists.txt  SKDGenObservationPlugin.cpp  SKDGeneralObservation.hpp  SafeTrajGenObservationPlugin.cpp
skd_oppt/plugins/SKDRewardPlugins/: CMakeLists.txt  KamikazeTrajGenRewardPlugin.cpp  SafeTrajGenRewardPlugin.cpp
skd_oppt/plugins/SKDTerminalPlugins/: CMakeLists.txt  KamikazeTrajGenTerminalPlugin.cpp  SafeTrajGenTerminalPlugin.cpp
skd_oppt/plugins/SKDTransitionPlugins/: CMakeLists.txt  KamikazeTrajGenTransitionPlugin.cpp  SKDActionSpaceDiscretizer.hpp  SafeTrajGenTransitionPlugin.cpp
skd_oppt/scripts/: skd_env_vars.sh
skd_python/: OPPTCarlaGeneralExperimentsAnalyser.py  OPPTGeneralGroupedScenarioAnalyser.py  OPPTLogAnalyser.py  SKDAggregator.py  SKDGeneralScenarioAnalyser.py  SKDKamikazeExperimentsAnalyser.py  SKDKamikazeTrajGenerator.py  SKDSafeTrajGenerator.py  SKDUtils.py  SKD_Aggregator.py  SKD_aggregator.py  ncap_data_env.yml  run_example_pipeline.py  run_skd_assessment.sh  skd_aggregator.py  skd_python_env.yml
skd_python/.ipynb_checkpoints/: run_example_pipeline-checkpoint.py
skd_python/conda_envs/: skd_conda.yml
(+104 files in other folders)
